# soc-rad-conv-fort

./: .depend  .gitignore  ClimateUtilities.py  Makefile  README.md  Te.txt  Untitled.ipynb  atmosphere.py  convection.py  del_T.out  fort.10  input.nml  mat.out  mat_py.out  nohup.out  output.nc  plotter.py  short_char.py  test.out  test.py
.github/workflows/: main.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
build_tests/test_compile/: CMakeLists.txt
build_tests/test_compile/src/: dummy_soc.f90
data/: state_0.csv  state_fluxes_0.csv
fortran/: .#input.nml_old  .depend  CMakeLists.txt  Makefile  build  hi.out  input.nml  input.nml_old  input_soc.nml  mat.out  merge_data.py  mkmf.template.oxford_ubuntu_1804  nohup.out  old_Makefile  olr_sweep.bash  olr_sweep.py  output.nc  param_sweep.bash  reorder_input.py  run.py  run_slurm.bash  slurm.bash  test.txt  test_output  timestep_test.err  timing_tests.bash  todo.readme
fortran/abundances/: K2_18b_1bar_conv_abund.csv  K2_18b_1bar_conv_abund_ordered.csv  K2_18b_1bar_conv_socindex  K2_18b_1bar_eq_abund.csv  K2_18b_1bar_eq_abund_ordered.csv  K2_18b_1bar_eq_socindex  K2_18b_2500bar_conv_abund.csv  K2_18b_2500bar_conv_abund_ordered.csv  K2_18b_2500bar_conv_socindex  K2_18b_leconte_2024_abund.csv  K2_18b_leconte_2024_socindex
fortran/cmake/Modules/: SetFortranFlags.cmake
fortran/lib/: README
fortran/plot_scripts/: plot_flux.py  plot_potemp.py  plot_ptq.py  tq_comp.py
fortran/prelim_runs/: K2-18b-quiet-1kbar-1myr-steady-state.txt  plot.py  test  test.f90
fortran/runaway_output/ps_1e4/: S_vec.txt  params.py  runaway.py  soc_OLR.py
fortran/runaway_output/ps_1e5/merged/: ClimateGraphicsMPL.py  moistad.py  params.py  params.txt  runaway.py  set_rad_env  soc_OLR.py
fortran/runaway_output/ps_1e5_convect/: S_vec.txt
fortran/simpson_test/: S_vec.txt
fortran/simpson_test_2/: S_vec.txt
fortran/src/: .#band  .#bilin_test  accurate_l.f90  adjust.f90  band_grey_rad.f90  condense.f90  convection.f90  ding_convection.f90  flux.F90  io.f90  main.F90  main.f90  matrix.f90  moisture_mod.f90  nc_wrap.f90  params.f90  phys.f90  phys_new.f90  ppm_remap.f90  rad_ross.f90  ross.f90  short_char_ross.f90  short_char_split_layer.f90  tables.f90  tau_mod.f90  timestep.f90  toon.F90  tsrad_short_char.f90  tsrad_short_char.f90_temp  twostr_module.f90  utils.f90
fortran/src/AQUA/Fortran/: aqua_eos.f95
fortran/src/archive/: bilin_test.f90_temp  cloud.f90_test  fsolve.f90  matrix.f90  socrates_interface.F90_old  tsrad_short_char.f90_temp
fortran/src/atmosphere/: atmosphere.f90
fortran/src/constants/: phys.f90
fortran/src/convection/: adjust.f90  adjust_md.f90  convection.f90  dry_adj.f90_ignore  eddy_diffusivity.f90  eos_dry_adj.f90  lsc.f90_ignore  moist_adj.f90_ignore  supercrit_adj.f90
fortran/src/driver/: init_pt.f90  main.F90  mat_step.f90  params.f90  timestep.f90
fortran/src/radiation/: flux.F90  jacobian.f90  mlt.f90  tau_mod.f90
fortran/src/radiation/general_band_grey/: band_grey_rad.f90
fortran/src/radiation/parmentier_picket/: short_char_ross.f90
fortran/src/radiation/semi_grey/: toon.F90  ts_short_char_bezier_mod.f90  tsrad_short_char.f90
fortran/src/socrates/: CMakeLists.txt
fortran/src/socrates/interface/: new_socrates_calc.f90  new_socrates_calc.f90_old  new_socrates_interface.f90  new_socrates_interface.f90_old  read_control.F90  set_atm.F90  set_control.F90  soc_calc.f90  soc_calc.f90_old  soc_init.f90  socrates_bones.F90  socrates_cloud_gen.F90  socrates_cloud_level_diag.F90  socrates_config.f90  socrates_config_mod.f90  socrates_def_diag.F90  socrates_runes.F90  socrates_set_aer.F90  socrates_set_atm.F90  socrates_set_bound.F90  socrates_set_cld.F90  socrates_set_cld_dim.F90  socrates_set_cld_mcica.F90  socrates_set_control.F90  socrates_set_diag.F90  socrates_set_dimen.F90  socrates_set_spectrum.F90  socrates_set_topography.F90
fortran/src/socrates/src/: .#new
fortran/src/utils/: bilinear_interp.f90  io.f90  utils.f90
fortran/src/water/: condense.f90  q_sat_test.f90  tables.f90
python/: SocRadConv.py  atmosphere.py  grey.py  moistad.py  plot.py  plotter.py  short_char.py
python/data/: state_10.csv  state_100.csv  state_102.csv  state_103.csv  state_105.csv  state_106.csv  state_112.csv  state_114.csv  state_116.csv  state_117.csv  state_119.csv  state_120.csv  state_123.csv  state_125.csv  state_126.csv  state_127.csv  state_129.csv  state_13.csv  state_130.csv  state_131.csv  state_133.csv  state_134.csv  state_137.csv  state_138.csv  state_14.csv  state_141.csv  state_142.csv  state_145.csv  state_146.csv  state_147.csv  state_150.csv  state_151.csv  state_152.csv  state_153.csv  state_154.csv  state_155.csv  state_156.csv  state_157.csv  state_158.csv  state_159.csv  (+2435 more)
python_wrap/cmake_test/: CMakeLists.txt  _add_cython.pyx  setup.py
python_wrap/cmake_test/add_cython/: __init__.py
python_wrap/cmake_test/src/: CMakeLists.txt  add_cython.f90  add_cython.h  add_cython.pyx  add_cython_interface.f90
src/: flux.f90  io.f90  main.f90  matrix.f90  params.f90  timestep.f90  tsrad_short_char.f90  utils.f90
test/: ClimateUtilities.py  Untitled.ipynb  moistad.py  phys.py  plot.py  plot_twostr.ipynb  plot_utils.py  test.py  twostr.py  water.py
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  plot_twostr-checkpoint.ipynb
